<resources>
    <string name="app_name">Santander Investimento</string>
    <string name="investiment">Investimento</string>
    <string name="contact">Contato</string>
    <string name="found">Fundo</string>
    <string name="cdi">CDI</string>
    <string name="in_month">No mês</string>
    <string name="in_year">No ano</string>
    <string name="months_12">12 meses</string>
    <string name="down">Baixar</string>
    <string name="value_percent">%1$d f</string>
    <string name="not_disponible">Não disponível</string>
    <string name="thanks">Obrigado!</string>
    <string name="message_success_form">Mensagem enviada com sucesso :)</string>
    <string name="send_new_message">Enviar nova mensagem</string>
    <string name="email_invalid">E-mail inválido</string>
    <string name="email_null">E-mail vazio</string>
    <string name="text_invalid">Texto inválido</string>
    <string name="text_null">Texto vazio</string>
    <string name="phone_invalid">Telefone inválido</string>
    <string name="phone_null">Telefone vazio</string>
    <string name="invest">Investir</string>
</resources>
