<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
  <android.support.v7.widget.Toolbar
      android:id="@+id/toolBar"
      android:layout_width="match_parent"
      android:layout_height="?actionBarSize"
      android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
    <TextView
        android:id="@+id/toolbarTitle"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/contact"
        android:layout_marginEnd="@dimen/margin_20_sp"
        android:textSize="@dimen/font_15_sp"
        android:textStyle="bold"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/black"
        android:layout_width="match_parent"/>
  </android.support.v7.widget.Toolbar>
  <TextView
      android:text="@string/message_sent"
      android:layout_width="323dp"
      android:layout_height="wrap_content"
      android:textStyle="bold"
      android:textSize="28sp"
      android:id="@+id/textView" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
      app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginTop="8dp"
      app:layout_constraintTop_toBottomOf="@+id/textView2" android:gravity="center"/>
  <TextView
      android:text="@string/thanks"
      android:layout_width="wrap_content"
      android:textSize="15sp"
      android:layout_height="wrap_content"
      android:id="@+id/textView2" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
      app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp" android:layout_marginTop="110dp"
      app:layout_constraintTop_toBottomOf="@+id/toolBar"/>
  <Button
      android:text="@string/send_new_message"
      android:layout_width="wrap_content"
      android:textColor="@color/colorPrimary"
      android:textAllCaps="false"
      android:textSize="16sp"
      android:background="@android:color/transparent"
      android:layout_height="wrap_content"
      android:id="@+id/resend" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
      app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp" app:layout_constraintBottom_toBottomOf="parent"
      android:layout_marginBottom="82dp"/>

</android.support.constraint.ConstraintLayout>
