<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fillViewport="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <android.support.constraint.ConstraintLayout
        android:paddingBottom="20dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ProgressBar
            android:visibility="gone"
            android:id="@+id/progressBar"
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <android.support.constraint.ConstraintLayout
            android:id= "@+id/constraintLayout"
            android:paddingBottom="20dp"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:src="@drawable/ic_shared"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <br.com.itamarlourenco.santandertecnologia_testeandroid.widgets.CustomTextView
                android:id="@+id/title"
                android:textStyle="bold"
                android:textSize="16sp"
                android:text="@string/investments"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <br.com.itamarlourenco.santandertecnologia_testeandroid.widgets.CustomTextView
                android:id="@+id/investment_funds"
                android:textColor="#7E7E7E"
                android:textSize="14sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="35dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.518"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title" />


            <br.com.itamarlourenco.santandertecnologia_testeandroid.widgets.CustomTextView
                android:id="@+id/secondTitle"
                android:textStyle="bold"
                android:textSize="28sp"
                android:textAlignment="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.502"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/investment_funds" />


        <br.com.itamarlourenco.santandertecnologia_testeandroid.widgets.CustomTextView
            android:id="@+id/whichIs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:textStyle="bold"
            android:textColor="#7E7E7E"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.511"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/secondTitle" />


            <br.com.itamarlourenco.santandertecnologia_testeandroid.widgets.CustomTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="55dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:id="@+id/description"
                android:textAlignment="center"
                android:textColor="#7E7E7E"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/secondTitle" />


            <br.com.itamarlourenco.santandertecnologia_testeandroid.widgets.CustomTextView
                android:id="@+id/degree"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="8dp"
                android:textStyle="bold"
                android:layout_marginRight="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.511"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/description" />


        <br.com.itamarlourenco.santandertecnologia_testeandroid.widgets.CustomGraphic
            android:id="@+id/graphic"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.511"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/degree"/>

            <br.com.itamarlourenco.santandertecnologia_testeandroid.widgets.CustomTextView
                android:id="@+id/moreInformation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/graphic" />


        <LinearLayout
            android:id="@+id/table"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/moreInformation">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <br.com.itamarlourenco.santandertecnologia_testeandroid.widgets.CustomTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <br.com.itamarlourenco.santandertecnologia_testeandroid.widgets.CustomTextView
                    android:layout_width="100dp"
                    android:textColor="#ACACAC"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:textSize="14sp"
                    android:text="Fundo" />

                <br.com.itamarlourenco.santandertecnologia_testeandroid.widgets.CustomTextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:textColor="#ACACAC"
                    android:textSize="14sp"
                    android:gravity="end"
                    android:text="CDI" />
            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <br.com.itamarlourenco.santandertecnologia_testeandroid.widgets.CustomTextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@color/color_label_table"
                    android:textSize="14sp"
                    android:text="@string/in_month" />

                <br.com.itamarlourenco.santandertecnologia_testeandroid.widgets.CustomTextView
                    android:id="@+id/fund_month"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:gravity="end" />

                <br.com.itamarlourenco.santandertecnologia_testeandroid.widgets.CustomTextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:id="@+id/cdi_month" />
            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <br.com.itamarlourenco.santandertecnologia_testeandroid.widgets.CustomTextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@color/color_label_table"
                    android:textSize="14sp"
                    android:text="@string/in_year" />

                <br.com.itamarlourenco.santandertecnologia_testeandroid.widgets.CustomTextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:id="@+id/fund_year" />

                <br.com.itamarlourenco.santandertecnologia_testeandroid.widgets.CustomTextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:id="@+id/cdi_year" />
            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <br.com.itamarlourenco.santandertecnologia_testeandroid.widgets.CustomTextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@color/color_label_table"
                    android:textSize="14sp"
                    android:text="@string/months_12" />

                <br.com.itamarlourenco.santandertecnologia_testeandroid.widgets.CustomTextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:id="@+id/cdi_12months" />

                <br.com.itamarlourenco.santandertecnologia_testeandroid.widgets.CustomTextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:id="@+id/fund_12months" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp" />

        </LinearLayout>

        <br.com.itamarlourenco.santandertecnologia_testeandroid.widgets.CustomButton
            android:id="@+id/button"
            android:text="@string/invest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/button_red_hover"
            android:textColor="@android:color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/table" />



    </android.support.constraint.ConstraintLayout>

    </android.support.constraint.ConstraintLayout>
</ScrollView>